plugins/scripting/scripting-tests/testData/diagnostics/repl/property_visibility.kts
// SNIPPET

private val x = 1

println(x)

// SNIPPET

println(<!INVISIBLE_REFERENCE!>x<!>)
